gRPC-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/grpc-backend: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "500"
    nginx.ingress.kubernetes.io/proxy-write-timeout: "500"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    linkerd.io/inject: ingress
  name: integration-ingress-grpc
  namespace: general
spec:
  rules:
    - host: svc.integration.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: integration-service
                port:
                  number: 3000
    - host: svc.tasks.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: task-controller
                port:
                  number: 3000
    - host: svc.authentication.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: authentication-service
                port:
                  number: 3000
