http-Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/grpc-backend: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
      grpc_set_header l5d-dst-override $service_name.$namespace.svc.cluster.local:$service_port;
    linkerd.io/inject: ingress
  name: http
  namespace: general
spec:
  rules:
    - host: calendar.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: calendar-service
                port:
                  number: 8080
    - host: dashboard.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: user-dashboard
                port:
                  number: 3000

    - host: stats.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: statistics
                port:
                  number: 3000
    - host: admin.athenabot.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: admin-dashboard-backend
                port:
                  number: 3000
